# populate

./: ChangeLog.md  LICENSE  README.md  default.nix  populate.cabal  stack.yaml
app/: Main.hs
examples/: example.toml
src/: Populate.hs  Util.hs
src/Populate/: Sources.hs
test/: Spec.hs
