name:           populate
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/cronokirby/populate#readme>
homepage:       https://github.com/cronokirby/populate#readme
bug-reports:    https://github.com/cronokirby/populate/issues
author:         Lúcás Meier
maintainer:     cronokirby@gmail.com
copyright:      2018 Lúcás Meier
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/populate

library
  exposed-modules:
      Populate
  other-modules:
  hs-source-dirs:
      src
  build-depends:
      base   >= 4.7 && < 5
    , htoml  >= 1.0 && < 1.1
    , parsec >= 3.1 && < 3.2
    , text   >= 1.2 && < 1.3
  default-language: Haskell2010

executable populate
  main-is: Main.hs
  other-modules:
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , populate
  default-language: Haskell2010

test-suite populate-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , populate
  default-language: Haskell2010
